deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtfs-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gtfs-validator
  template:
    metadata:
      labels:
        app: gtfs-validator
    spec:
      containers:
      - name: gtfs-validator
        image: gcr.io/$PROJECT_ID/$IMAGE_GTFS_VALIDATOR:$GITHUB_SHA
      restartPolicy: Always
---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gtfs-validator
  name: gtfs-validator
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: gtfs-validator
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtfs-validator-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - gtfs-validator.mobilidade.rio
      secretName: gtfs-validator-tls
  rules:
    - host: gtfs-validator.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtfs-validator
                port:
                  number: 80
